RM-482: RM .classpath files have local library references
* hard coded projects have been removed from archive
* use "gradle eclipse" task to generate repository and share eclipse project with local references
* updated ReadMe.txt



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0-BUG-FIX@40784 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,9 @@ subprojects {
 		compile fileTree(dir: explodedLibsDir, include: '*.jar')     	
 	}	
 	
+	// make sure existing eclipse projects are cleared
+	tasks.eclipse.dependsOn(cleanEclipse)
+	
 	/** --- Compile tasks --- */
 		
 	// make sure that the dependancies have been unpacked before compiling the Java
