It was not possible to edit/delete a custom meta data
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0-BUG-FIX@40904 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
@@ -19,3 +19,7 @@ message.create-success=Successfully added new custom property.
 message.create-failure=Failed to add new custom property: {0}
 message.edit-success=Successfully saved custom property.
 message.edit-failure=Failed to save custom property: {0}
+message.delete.title=Delete custom property
+message.delete.text=Are you sure you want to delete: {0}?
+message.delete-success=Successfully deleted custom property.
+message.delete-failure=Failed to delete custom property: {0}
