* Updating the list of loaded data sets
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@41630 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get.properties
@@ -6,3 +6,4 @@ dataSet.importButton.text=Import
 dataSet.message.importing=Importing Records Management test data please wait...
 dataSet.message.import-ok=Records Management Site import successful.
 dataSet.message.import-fail=Failed to import test data into Records Management Site.
+dataSet.loaded.list=Loaded data sets
