RM InPlace Prototype:
  * permission mapping improvements ... allows filling and declaration of unfiled records
  * actions of 'records' in doc lib are shown as restricted rm list
  * "Record" banner is shown in doc lib if content is a record (this differs from the normal record view where the undeclared status is shown, this isn't relevant for a content user)
  * linked to many record folders indicator not shown unless it really is linked to many record folders
  


git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/INPLACE@42374 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -282,3 +282,8 @@ tool.rm-email-mappings.label=Email Mappings
 tool.rm-email-mappings.description=Records Management Email Mappings
 tool.rm-user-rights.label=User Rights Report
 tool.rm-user-rights.description=Records User Rights Report
+
+details.undeclared-record.info=Undeclared Record
+details.record.identifier=Unique Record Identifier
+details.record.originator=Originator
+details.record.originating-organization=Originating Organization
