--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
@@ -26,7 +26,7 @@ label.automatic.true=Automatic
 label.automatic.false=Manual
 
 relation.option.or=Whichever event is earlier
-relation.option.and=When all events has occured
+relation.option.and=When all events has occurred
 
 button.addevent=Add Event
 button.createevent=Create Event
