--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist.get.properties
@@ -1,4 +1,8 @@
 ## Buttons
+button.sort.ascending=Sort Ascending
+button.sort.descending=Sort Descending
+button.folders.show=Show Folders
+button.folders.hide=Hide Folders
 button.view.simple=Simple View
 button.view.detailed=Detailed View
 
@@ -8,6 +12,7 @@ menu.select.all=All
 menu.select.none=None
 menu.select.invert=Invert Selection
 menu.select.folders=Folders
+menu.select.documents=Documents
 menu.select.records=Records
 menu.select.undeclared-records=Undeclared Records
 
@@ -57,3 +62,7 @@ label.filter-description=Same type as {0}
 
 ## Empty List
 no.items.title=No items
+
+## Tips
+tip.insitu-rename=Rename
+tip.insitu-tag=Tag
