--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist.get.properties
@@ -66,3 +66,6 @@ no.items.title=No items
 ## Tips
 tip.insitu-rename=Rename
 tip.insitu-tag=Tag
+
+## Help panels, including Drag and Drop
+show.folders=Show {0} subfolder(s)
