RM-515 (Incorrect labels for categories, folders and records on Repository Browser page)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@42682 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -282,3 +282,14 @@ tool.rm-email-mappings.label=Email Mappings
 tool.rm-email-mappings.description=Records Management Email Mappings
 tool.rm-user-rights.label=User Rights Report
 tool.rm-user-rights.description=Records User Rights Report
+
+# Record Category
+details.category.identifier=Record Category Identifier
+details.category.disposition-authority=Disposition Authority
+details.category.disposition-instructions=Disposition Instructions
+
+# Record Folder
+details.folder.identifier=Record Folder Identifier
+
+# Record
+details.record.identifier=Unique Record Identifier
