--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
@@ -12,6 +12,7 @@ button.freeze.record=Freeze Record(s)
 button.electronic=Electronic
 button.non-electronic=Non-electronic
 button.report=Report
+button.manage-rules=Manage Rules
 
 ## Dialog labels
 label.new-rma_recordCategory.title=New Record Category
@@ -68,6 +69,9 @@ description.transfers.more.filterDisplay=currently viewing "{0}"
 description.holds=Active Holds
 description.holds.more=(Records and Record Folders that are Frozen)
 description.holds.more.filterDisplay=currently viewing "{0}"
+description.unfiledRecords=Unfiled Records
+description.unfiledRecords.more=(Records that are not Filed)
+description.unfiledRecords.more.filterDisplay=currently viewing "{0}"
 
 ## Browser dialogs
 label.filter-description.acp=Alfresco Content Package file (.acp)
