RM-463: Tooltip text inconsistent on Edit Disposition Schedule page
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0-BUG-FIX@42776 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
@@ -16,8 +16,8 @@ label.when=When event occurs
 label.description=Step Description
 label.select.location=Select location...
 
-icon.editaction=Edit Action
-icon.deleteaction=Delete Action
+icon.editaction=Edit
+icon.deleteaction=Delete
 icon.deleteevent=Delete Event
 
 label.or=or
