There is no need to override the documentlist.get.properties. The rm specific properties have been moved to rm.properties. In doing so we'll prevent missing "standard" labels
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@42794 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -283,13 +283,74 @@ tool.rm-email-mappings.description=Records Management Email Mappings
 tool.rm-user-rights.label=User Rights Report
 tool.rm-user-rights.description=Records User Rights Report
 
+## Buttons
+button.sort.ascending=Sort Ascending
+button.sort.descending=Sort Descending
+button.folders.show=Show Folders
+button.folders.hide=Hide Folders
+button.view.simple=Simple View
+button.view.detailed=Detailed View
+
+## Drop-down Menus
+menu.select=Select
+menu.select.all=All
+menu.select.none=None
+menu.select.invert=Invert Selection
+menu.select.folders=Folders
+menu.select.documents=Documents
+menu.select.records=Records
+menu.select.undeclared-records=Undeclared Records
+
+## Metadata Fields
+# Generic
+details.created.on=Created on
+details.created.by=Created by
+details.modified.on=Modified on
+details.modified.by=Modified by
+details.by=By
+details.size=Size
+details.description=Description
+details.description.none=(None)
 # Record Category
 details.category.identifier=Record Category Identifier
 details.category.disposition-authority=Disposition Authority
 details.category.disposition-instructions=Disposition Instructions
-
+details.category.vital-record-indicator=Vital Record Indicator
 # Record Folder
 details.folder.identifier=Record Folder Identifier
-
+details.folder.vital-record-indicator=Vital Record Indicator
 # Record
 details.record.identifier=Unique Record Identifier
+details.record.date-filed=Date Filed
+details.record.publication-date=Publication Date
+details.record.originator=Originator
+details.record.originating-organization=Originating Organization
+# Undeclared Record
+details.undeclared-record.info=Undeclared Record
+# Transfer Container
+details.transfer-container.title=Transfer {0}
+details.transfer-container.is-accession=<em>Note:</em> Transfer type is Accession to NARA
+# Hold Container
+details.hold-container.title=Hold created on {0}
+details.hold-container.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
+details.hold-container.reason=Reason for Hold
+details.hold-container.reason.none=Not Available
+
+## Pop-up Messages
+# General
+message.loading=Loading the File Plan...
+message.error=Could not access the File Plan
+message.empty=No items
+
+## File Upload (upload new version)
+label.filter-description=Same type as {0}
+
+## Empty List
+no.items.title=No items
+
+## Tips
+tip.insitu-rename=Rename
+tip.insitu-tag=Tag
+
+## Help panels, including Drag and Drop
+show.folders=Show {0} subfolder(s)
