RM-489: Disabling an imported data set so that it cannot be imported again
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@43060 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get.properties
@@ -1,9 +1,8 @@
 dataSet.header.title=Import Data Set
 dataSet.label=Data Set
-dataSet.select.title:Select a data set and click the import button to load the test data
-dataSet.select.label:Select a data set
+dataSet.select.title=Select a data set and click the import button to load the test data
+dataSet.select.label=Select a data set
 dataSet.importButton.text=Import
 dataSet.message.importing=Importing Records Management test data please wait...
-dataSet.message.import-ok=Records Management Site import successful.
+dataSet.message.import-ok=Selected data set has been successfully imported.
 dataSet.message.import-fail=Failed to import test data into Records Management Site.
-dataSet.loaded.list=Loaded data sets
