--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/management.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/management.get.properties
@@ -5,6 +5,7 @@ label.display-site=Records Management Site
 label.load-test-data=Load Test Data
 label.user-role-report=User Role Report
 label.rm-console=Management Console
+label.not-rm-admin=Not privileged to create a Records Management site
 
 message.creating=Creating Records Management Site please wait...
 message.create-ok=Records Management Site successfully created.
