RM: add -force parameter to build scripts
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@43482 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -301,7 +301,7 @@ subprojects {
 		
 		mmt = new org.alfresco.repo.module.tool.ModuleManagementTool()
 		mmt.setVerbose(true)		
-		mmt.installModule(ampFileLocation.getPath(), warFileLocation.getPath(), false, false, false)
+		mmt.installModule(ampFileLocation.getPath(), warFileLocation.getPath(), false, true, false)
 	}
 	
 	task cleanDeploy(type: Delete) {
