BDE-107: Ensure clean also deletes 'dist' folder
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@43740 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ task wrapper(type: Wrapper) {
     gradleVersion = '1.0-milestone-8'
 }
 
+task deleteDist(type: Delete) {
+    ant.delete(includeEmptyDirs: 'true', dir: 'dist')
+}
+
 task packageBuild (dependsOn: [':rm-server:amp', ':rm-share:amp']) << {
 	
 	distDir = file('dist')
