RM-552 (Add 'Manage Permission' action to file plan toolbar)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@43798 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
@@ -4,6 +4,7 @@ button.new-folder=New Folder
 button.upload=File
 button.import=Import
 button.export-all=Export All
+button.manage-permissions=Manage Permissions
 button.up=Up
 button.customize=Customize
 button.navbar.show=Show Breadcrumb
