RM: update build scripts on HEAD to pull 4.2.b as depedant Alfresco version
  * fix compile error in test script
  * remove erronious char from file header



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@43841 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -92,11 +92,20 @@ subprojects {
 		}
 		mavenCentral()
 		maven {
-			url "https://artifacts.alfresco.com/nexus/content/groups/internal"
+			url alfrescoMavenUrl
+		}
+		maven {
+			url alfrescoEnterpriseMavenUrl
 			credentials {
-				username 'bamboo'
-				password 'b@mb00'
+				username alfrescoEnterpriseMavenUser
+				password alfrescoEnterpriseMavenPwd
 			}
+		}
+		maven {
+			url 'https://artifacts.alfresco.com/nexus/content/groups/public-snapshots'
+		}
+		maven {
+			url 'https://repository.jboss.org/nexus/content/groups/public'
 		}
 	}
 	
