--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,12 @@ groupid=alfresco
 packageName=rm
 version=2.1.0
 build=dev
-alfrescoBaseVersion=4.0.2
+
+alfrescoMavenUrl=https://artifacts.alfresco.com/nexus/content/groups/public/
+alfrescoEnterpriseMavenUrl=https://artifacts.alfresco.com/nexus/content/groups/internal
+alfrescoEnterpriseMavenUser=
+alfrescoEnterpriseMavenPwd=
+
+# set to org.alfresco.enterprise when enterprise version required
+alfrescoGroupId=org.alfresco
+alfrescoBaseVersion=4.2.b
