RM: Post merge fixes
  * build scripts updated so generated eclipse projects don't double up dependancies
  * demo code removed entirely
  * permission service override replaced with extended class based on updated core permission service implementation
  * unit test juggling 



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@44009 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,10 @@ subprojects {
 		}
 	}
 	
+	configurations {
+		alfrescoDeps
+	}	
+	
 	configurations.all {
 		exclude group: 'com.sun.jdmk', module: 'jmxtools'
 		exclude group: 'com.sun.jmx', module: 'jmxri'
@@ -143,7 +147,7 @@ subprojects {
 	/** --- Dependancy tasks --- */	
 
 	task fetchWarFile(type:Copy) {
-        from configurations.testRuntime
+        from configurations.alfrescoDeps
         into '.'
         include '*.war'
         rename { String filename -> warFile }
