"RM-464: Grammatical error in disposition schedule".
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@44136 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
@@ -42,4 +42,4 @@ message.deletingAction=Deleting step
 message.deleteActionSuccess=Step was successfully deleted
 message.deleteActionFailure=The step could not be deleted
 message.loadingSteps=Loading steps...
-message.noSteps=No steps exist, click "Add Step" to create one.
+message.noSteps=No steps exist. Click "Add Step" to create one.
