RM-553 - Create record repository action & RM-554 - Create record UI action
  * filled out create record action implemenation
  * added 'Create Record" action to normal document library
  * configured UI action to call back to repo action
  * TODO aciton icon



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@44279 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -130,6 +130,7 @@ actions.create-disposition-schedule=Create Disposition Schedule
 actions.upload-new-version=Upload New Version
 actions.view-details=View Details
 actions.view-audit-log=View Audit Log
+actions.create-record=Create Record
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -186,6 +187,8 @@ message.unfreeze-all.failure=Could not Unfreeze All in Hold ''{0}''
 message.unfreeze-all.success=All Records in Hold ''{0}'' now Unfrozen
 message.create-disposition-schedule.failure=Could not Create Disposition Schedule in ''{0}''
 message.create-disposition-schedule.success=Disposition Schedule in ''{0}'' now created
+message.create-record.success=Successfully created Record
+message.create-record.failure=Could not create Record
 
 
 ## File Plan Status Indicators
