RM-575 (Rename 'file' action in file plan to 'link')
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@45382 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -110,7 +110,7 @@ actions.edit-disposition-schedule=Edit Disposition Schedule
 actions.edit-reason=Edit Hold Details
 actions.edit-review-as-of-date=Edit Review Date
 actions.file-report=File Report
-actions.file-to=File to...
+actions.link-to=Link to...
 actions.freeze=Freeze
 actions.manage-permissions=Manage Permissions
 actions.move-to=Move to...
@@ -199,7 +199,7 @@ status.rm-cutoff=Cut Off
 status.rm-cutoff-folder=Cut Off (implies Record Folder is Closed)
 status.rm-destroyed=Destroyed
 status.rm-frozen=Record is Frozen
-status.rm-multi-parent=Record has been Filed in Multiple Record Folders
+status.rm-multi-parent=Record has been linked in multiple record folders
 status.rm-open=Record Folder is Open
 status.rm-transfer=Awaiting Completion for Transfer
 status.rm-transferred=Transferred
