--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-to.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-to.get.properties
@@ -21,12 +21,12 @@ move.message.please-wait=Files being moved...
 move.message.success=Successfully moved {0} items
 move.message.failure=The Move To operation could not be completed
 
-## File To
-file.node.root=File Plan
-file.title.single=File {0} to...
-file.title.multi=File {0} items to...
-file.button=File
-file.message.no-files=At least one file must be supplied
-file.message.please-wait=Files being filed...
-file.message.success=Successfully filed {0} items
-file.message.failure=The File To operation could not be completed
+## Link To
+link.node.root=File Plan
+link.title.single=Link {0} to...
+link.title.multi=Link {0} items to...
+link.button=Link
+link.message.no-files=At least one file must be supplied
+link.message.please-wait=Files being linked...
+link.message.success=Successfully linked {0} items
+link.message.failure=The 'Link To' operation could not be completed
