--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
@@ -34,7 +34,7 @@ menu.selected-items.cutoff=Cutoff
 menu.selected-items.delete=Delete
 menu.selected-items.destroy=Destroy
 menu.selected-items.export=Export
-menu.selected-items.file-to=File to...
+menu.selected-items.link-to=Link to...
 menu.selected-items.freeze=Freeze
 menu.selected-items.move-to=Move to...
 menu.selected-items.reviewed=Reviewed
