RM-576 (A user can use the create site dialog to create a records management site)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@45516 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -364,3 +364,11 @@ details.undeclared-record.info=Undeclared Record
 details.record.identifier=Unique Record Identifier
 details.record.originator=Originator
 details.record.originating-organization=Originating Organization
+
+## Create site dialog
+description.recordsManagementSite=Records Management Site
+title.recordsManagementSite=Records Management
+type.recordsManagementSite=Records Management Site
+
+## Console title
+link.managementConsole=Management Console
