RM-577 (A user can chose to hide a record within a collaboriation site, via a UI action)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@45630 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -131,6 +131,7 @@ actions.upload-new-version=Upload New Version
 actions.view-details=View Details
 actions.view-audit-log=View Audit Log
 actions.create-record=Create Record
+actions.hide-record=Hide Record
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -189,6 +190,8 @@ message.create-disposition-schedule.failure=Could not Create Disposition Schedul
 message.create-disposition-schedule.success=Disposition Schedule in ''{0}'' now created
 message.create-record.success=Successfully created Record
 message.create-record.failure=Could not create Record
+message.hide-record.success=Successfully hidden Record
+message.hide-record.failure=Could not hide Record
 
 
 ## File Plan Status Indicators
