Added a confirmation dialog for the hide record action
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@45764 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -81,6 +81,8 @@ message.confirm.destroyMultiple=Do you want to destroy the {0} selected files?
 message.confirm2.destroy.title=Destroy Confirmation
 message.confirm2.destroy=The content for the file will be permanently deleted, are you sure you want to continue?
 message.confirm2.destroyMultiple=The content for the files will be permanently deleted, are you sure you want to continue?
+message.confirm.hide.record.title=Hide record
+message.confirm.hide.record=You are hiding the record add you will not be able to see this record in your collaboration site anymore!
 message.select=Select...
 message.pdf-record-fonts.title=PDF Records: Embedded Font Check
 message.pdf-record-fonts.accession=Please ensure any PDF Records just Accessioned to NARA include the applicable embedded fonts.
