RM-578 (The records management team can file an unfiled record using an UI action)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@45914 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -113,6 +113,7 @@ actions.edit-reason=Edit Hold Details
 actions.edit-review-as-of-date=Edit Review Date
 actions.file-report=File Report
 actions.link-to=Link to...
+actions.file-to=File to...
 actions.freeze=Freeze
 actions.manage-permissions=Manage Permissions
 actions.move-to=Move to...
