--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
@@ -30,3 +30,13 @@ link.message.no-files=At least one file must be supplied
 link.message.please-wait=Files being linked...
 link.message.success=Successfully linked {0} items
 link.message.failure=The 'Link To' operation could not be completed
+
+## File To
+file.node.root=File Plan
+file.title.single=File {0} to...
+file.title.multi=File {0} items to...
+file.button=File
+file.message.no-files=At least one file must be supplied
+file.message.please-wait=Files being filed...
+file.message.success=Successfully filed {0} items
+file.message.failure=The 'File To' operation could not be completed
