RM-579 (The records managment team can reject an unfiled record using an UI action)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@45995 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -71,6 +71,7 @@ label.menu.custom=Custom
 
 ## Buttons
 button.freeze.record=Freeze Record
+button.reject.record=Reject Record
 
 ## Pop-up Messages
 message.confirm.delete.title=Delete Confirmation
@@ -135,6 +136,7 @@ actions.view-details=View Details
 actions.view-audit-log=View Audit Log
 actions.create-record=Create Record
 actions.hide-record=Hide Record
+actions.reject=Reject
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -195,7 +197,10 @@ message.create-record.success=Successfully created Record
 message.create-record.failure=Could not create Record
 message.hide-record.success=Successfully hidden Record
 message.hide-record.failure=Could not hide Record
-
+message.reject.reason=Reason:
+message.reject.title=Reason for Rejection
+message.reject.failure=Could not reject ''{0}''
+message.reject.success=''{0}'' has been rejected
 
 ## File Plan Status Indicators
 status.rm-accession=Awaiting Completion for Accession
