RM-597 (A records manager can create a rule that automatically rejects an unfiled record)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@47343 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -383,3 +383,6 @@ type.recordsManagementSite=Records Management Site
 
 ## Console title
 link.managementConsole=Management Console
+
+## Rules
+customise.reject.text=Reject records with comment ''{param.reason}''
