--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get.properties
@@ -7,3 +7,4 @@ dataSet.message.importing=Importing Records Management test data please wait...
 dataSet.message.import-ok=Selected data set has been successfully imported.
 dataSet.message.import-fail=Failed to import test data into Records Management Site.
 dataset.not-rm-admin=Not privileged to import data set
+dataset.not-rm-site=This dashlet can be used for RM sites only!
