add the internal-staging Maven repo, to be able to get the yet unreleased 4.1.4 + remove transitivity to Alfresco dependencies
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.0@47883 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,14 @@ subprojects {
 				password 'b@mb00'
 			}
 		}
+        // Temporarily add the internal-staging Maven repo, to be able to get the yet unreleased 4.1.4
+		maven {
+			url "https://artifacts.alfresco.com/nexus/content/repositories/internal-staging"
+			credentials {
+				username 'bamboo'
+				password 'b@mb00'
+			}
+		}
 	}
 	
 	dependencies {		     		
