--- a/rm-share/build.gradle
+++ b/rm-share/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-	testRuntime group: 'org.alfresco.enterprise', name: 'share', version: alfrescoBaseVersion, type: 'war'
+	testRuntime group: 'org.alfresco.enterprise', name: 'share', version: alfrescoBaseVersion, type: 'war', transitive: false
 }
