RM-588 (The actions in the toolbar for an unfiled record is not correct)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@47901 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/toolbar.get.properties
@@ -35,6 +35,7 @@ menu.selected-items.delete=Delete
 menu.selected-items.destroy=Destroy
 menu.selected-items.export=Export
 menu.selected-items.link-to=Link to...
+menu.selected-items.file-to=File to...
 menu.selected-items.freeze=Freeze
 menu.selected-items.move-to=Move to...
 menu.selected-items.reviewed=Reviewed
