--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -215,6 +215,7 @@ status.rm-open=Record Folder is Open
 status.rm-transfer=Awaiting Completion for Transfer
 status.rm-transferred=Transferred
 status.rm-vital-record=Vital Record Indicator
+status.rm-rejected-record=Rejected Record
 # Record Types
 status.rm-digital-photograph-record=Digital Photograph Record
 status.rm-pdf-record=PDF Record
