RM-629 (The records management console is accessable via the share 'More' menu)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@48252 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -386,3 +386,8 @@ link.managementConsole=Management Console
 
 ## Rules
 customise.reject.text=Reject records with comment ''{param.reason}''
+
+## Records Management Console
+header.rm-console.label=Records Management...
+header.rm-management.label=Management Console
+header.rm-management.description=Management Console
