* RM-630 (Definition for 'request for info' workflow) * RM-631 (The records management team can create a rule to request information about an undeclared record) * RM-632 (The records management team can use an UI action and custom UI to start a "request for information" workflow about an undeclared record)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@48854 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -72,6 +72,7 @@ label.menu.custom=Custom
 ## Buttons
 button.freeze.record=Freeze Record
 button.reject.record=Reject Record
+button.request-info=Request Information
 
 ## Pop-up Messages
 message.confirm.delete.title=Delete Confirmation
@@ -89,6 +90,8 @@ message.pdf-record-fonts.title=PDF Records: Embedded Font Check
 message.pdf-record-fonts.accession=Please ensure any PDF Records just Accessioned to NARA include the applicable embedded fonts.
 message.pdf-record-fonts.transfer=Please ensure any PDF Records just Transferred include the applicable embedded fonts.
 message.pdf-record-fonts.unknown=If the Transfer or Accession included PDF Records, you should check the applicable embedded fonts have been included.
+message.request-info-success=Information requested successfully
+message.request-info-failure=An error occurred whilst requesting information
 
 ## Admin Console
 message.admin-console-access-denied=Access Denied - additional permissions are required to access this component.
@@ -137,6 +140,7 @@ actions.view-audit-log=View Audit Log
 actions.create-record=Create Record
 actions.hide-record=Hide Record
 actions.reject=Reject
+actions.request-info=Request Information
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
