RM-631 (The records management team can create a rule to request information about an undeclared record)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@48906 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -225,6 +225,7 @@ status.rm-digital-photograph-record=Digital Photograph Record
 status.rm-pdf-record=PDF Record
 status.rm-scanned-record=Scanned Record
 status.rm-web-record=Web Record
+status.rm-info-requested=Information Requested
 # Exif
 status.exif=EXIF metadata available
 
