--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -396,3 +396,13 @@ customise.reject.text=Reject records with comment ''{param.reason}''
 header.rm-console.label=Records Management...
 header.rm-management.label=Management Console
 header.rm-management.description=Management Console
+
+## Request Info Workflow
+rm.wf.information-requested-for-record=Information Requested For Record
+rm.wf.request-information-from=Request Information From
+rm.wf.requested-information=Requested Information
+rm.wf.record=Record
+rm.wf.selected-users-and-groups=Selected users and groups
+rm.wf.give-details=Give details
+rm.wf.message=Message
+rm.wf.details=Details
