RM-631 (The records management team can create a rule to request information about an undeclared record)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@49071 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -391,6 +391,7 @@ link.managementConsole=Management Console
 
 ## Rules
 customise.reject.text=Reject records with comment ''{param.reason}''
+customise.requestInfo.text=Creates a workflow task for a list of specified people and requests the following info ''{param.requestedInfo}''
 
 ## Records Management Console
 header.rm-console.label=Records Management...
