RM-668 (Move RM 2.1 onto 4.2.d)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@49274 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
-alfrescoBaseVersion=4.2.b
+alfrescoBaseVersion=4.2-SHOULDERS-build5
