--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,21 @@
+# build details
 groupid=alfresco
 packageName=rm
 version=2.1.0
 build=dev
 
+# maven urls's
 alfrescoMavenUrl=https://artifacts.alfresco.com/nexus/content/groups/public/
 alfrescoEnterpriseMavenUrl=https://artifacts.alfresco.com/nexus/content/groups/internal
+
+# set credentials for protected maven repo or pass on command line:
+#   -PalfrescoEnterpriseMavenUser=userName -PalfrescoEnterpriseMavenPwd=password
 alfrescoEnterpriseMavenUser=
 alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
 alfrescoBaseVersion=4.2-SHOULDERS-build5
+
+# indicates whether this is a local build or not
+localBuild=true
