RM: Revert HEAD to 4.2.b dependancy
  * remove r49274
  * remove r49264



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@49415 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
-alfrescoBaseVersion=4.2-SHOULDERS-build5
+alfrescoBaseVersion=4.2.b
 
 # indicates whether this is a local build or not
 localBuild=true
