RM-633 (A records admin is able to view the users and groups in a role from the management console UI)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@50035 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -303,6 +303,8 @@ tool.rm-email-mappings.label=Email Mappings
 tool.rm-email-mappings.description=Records Management Email Mappings
 tool.rm-user-rights.label=User Rights Report
 tool.rm-user-rights.description=Records User Rights Report
+tool.rm-users-and-groups.label=Users and Groups
+tool.rm-users-and-groups.description=Records Management Users and Groups
 
 ## Buttons
 button.sort.ascending=Sort Ascending
