RM-633 (A records admin is able to view the users and groups in a role from the management console UI)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@50080 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
@@ -2,8 +2,8 @@ label.roles=Roles
 label.users=Users
 label.groups=Groups
 label.add-group=Add
-label.delete-group=Delete
+label.remove-group=Remove
 label.add-user=Add
-label.delete-user=Delete
+label.remove-user=Remove
 
 message.get-roles-failure=Failed to retrieve user roles: {0}
