RM-690 (A records admin is able to add a user or group to a role from the management console)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@50134 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
@@ -7,3 +7,13 @@ label.add-user=Add
 label.remove-user=Remove
 
 message.get-roles-failure=Failed to retrieve user roles: {0}
+
+message.load-peopleFinder-failure=Could not load 'People Finder' component
+message.load-groupFinder-failure=Could not load 'Group Finder' component
+message.adduser-success=Successfully added user ''{0}''.
+message.adduser-failure=Failed to add user ''{0}''.
+message.addgroup-success=Successfully added group ''{0}''.
+message.addgroup-failure=Failed to add group ''{0}''.
+
+panel.adduser.header=Add User
+panel.addgroup.header=Add Group
