--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
@@ -15,5 +15,10 @@ message.adduser-failure=Failed to add user ''{0}''.
 message.addgroup-success=Successfully added group ''{0}''.
 message.addgroup-failure=Failed to add group ''{0}''.
 
+message.confirm.removeuser=Are you sure you want to remove ''{0}'' from the role?
+message.confirm.removeuser.title=Remove User from Role
+message.removeuser-success=Successfully removed user ''{0}''.
+message.removeuser-failure=Failed to remove user ''{0}''.
+
 panel.adduser.header=Add User
 panel.addgroup.header=Add Group
