--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get.properties
@@ -20,5 +20,10 @@ message.confirm.removeuser.title=Remove User from Role
 message.removeuser-success=Successfully removed user ''{0}''.
 message.removeuser-failure=Failed to remove user ''{0}''.
 
+message.confirm.removegroup=Are you sure you want to remove ''{0}'' from the role?
+message.confirm.removegroup.title=Remove Group from Role
+message.removegroup-success=Successfully removed group ''{0}''.
+message.removegroup-failure=Failed to remove group ''{0}''.
+
 panel.adduser.header=Add User
 panel.addgroup.header=Add Group
