RM-735 (DOD Recert: Bugs on the "Edit Custom Metadata" page)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/DODRECERT@50970 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
@@ -6,7 +6,7 @@ label.custom-metadata=Custom Metadata
 label.selection-list=Selection list
 label.label=Label
 label.use-list=Use selection list
-label.mandatory=Mandatory Field
+label.mandatory=Mandatory
 
 label.datatype.unknown=Unknown
 label.datatype.text=Text
@@ -23,3 +23,6 @@ message.delete.title=Delete custom property
 message.delete.text=Are you sure you want to delete: {0}?
 message.delete-success=Successfully deleted custom property.
 message.delete-failure=Failed to delete custom property: {0}
+
+mandatory.true=True
+mandatory.false=False
