RM-736 (DOD Recert: Bugs on the "List of Values" page)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/DODRECERT@50975 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get.properties
@@ -30,3 +30,8 @@ message.confirm.removeaccess.title=Remove access authority
 message.confirm.removeaccess.text=Are you sure you want to remove ''{0}''?
 message.removeaccess.failure=Failed to remove access authority.
 message.addaccess.failure=Could not add value.
+
+table.header.actions=Actions
+table.header.icon=Icon
+table.header.list=List
+table.header.name=Name
